# LMS

./: .coverage  .env.sample  README.md  course_fixture.json  coverage_report.md  docker-compose.yaml  groups.json  lesson_fixture.json  payment_fixture.json  pyproject.toml  requirements.txt  user_fixture.json
.github/workflows/: ci.yaml
config/: settings.py  urls.py
lms/: admin.py  models.py  pagination.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
lms/management/commands/: add_data.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_coursesubscription.py  0004_coursepayment.py  0005_course_price.py  0006_alter_coursesubscription_course_and_more.py
users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payment.py
